
Database
- Added 1965 utility vehicles to HUN in 2000

Politics/Influence
- Rebalanced costs to influence decisions
- Changed Charles Taylor to Right-Wing Populist from Neutral Autocracy
- Added influence values for Liberian and Sierra Leonean rebels
- Made Armed Forces Revolutionary council a puppet of Taylor's Liberia to fix some weirdness with the wars

Bugfixes
- Fixed AI spamming Trade Agreement
- Localization fixes in One Child Policy
- Fixed released nations not being able to initialize custom political content
- Fixed issue in Greek tree where the clamp_variable was not correctly assigned
- Corrected Winnipeg's name
- Fixed Light Striker Fighter carrier category name not showing up
- Fixed a minor missing bracket in the Israeli tree
- Fixed nukes not producing
- Minor loc fixes in the Danish focus
- Fixed one of the nuclear reactors having a fuel cost
- Fixed Legacy Italian ship variants showing up for
- Localized Missing Tech Share Name for Israel
- More cleaning of the error log
- Fixed icon for Greek modifier
- Non-MTG variants should now only show up for non-MTG things
- Military Aid button requirements corrected
- Improved logic for manipulate politics so it actually removes 10% of the influence in the nation
- Corrected the name of the Saskatchewan class Frigate
- Fixed Nigerian Fleet crashing in 2000
- Cleaned up experience errors in Naval OoBs
- Fixed stuff being unable to convert in engine sections
- Releasable should now have politics/ability to invest
- Releasable now inherit the technology from releaser
- Fixed exploit with the invest and cancel bug
- Social Services tech gives a buff to rooting out resistance and entrenchment
- Fixed UI positioning of the puppet view in diplomacy
- Additional fixes to the MTG OoBs and tech balance
- Fix to the Italian carrier being a carrier rather then a heli operator
- Fixed AI Russia not following game rules
- Russia should now only go Putin when playing Historical