@@ -101,3 +101,20 @@ news_event = {
 		log = "[GetDateText]: [This.GetName]: ethiopia_news.6.a executed"
 	}
 }
+
+#Peace between Eritrea and Ethiopia
+news_event = { 
+	id = ethiopia_news.7
+	immediate = { log = "[GetDateText]: [Root.GetName]: event ethiopia_news.7" }
+	title = ethiopia_news.7.t
+	desc = ethiopia_news.7.d
+	picture = GFX_news_ethiopian_military
+	
+	major = yes
+	is_triggered_only = yes
+	
+	option = {
+		name = ethiopia_news.7.a
+		log = "[GetDateText]: [This.GetName]: ethiopia_news.7.a executed"
+	}
+}
