@@ -2273,6 +2273,14 @@
  ethiopia.20.t: "Famine Strikes!"
  ethiopia.20.d: "The recent conflict between our neighbors and the refusal of cooperation between Eritrea and Ethiopia has resulted in something far more devastating. The country has fallen into a famine and people are beginning to die as the food market in the country is strangled by the lack of cooperation from our neighbors. The government must do something in order to help the people. They need to do something before the country collapses in on itself."
  ethiopia.20.a: "Oh No"
+ ethiopia.21.t: "Defeat in the Field"
+ ethiopia.21.d: "After months of gridlock, the enemy has finally broken through our lines and invaded our lands proper. Perhaps we should agree to the peace framework that the Organization of African Unity laid down in 1998 and suggest a ceasefire?"
+ ethiopia.21.a: "Peace is the only option"
+ ethiopia.21.b: "War is the only option"
+ ethiopia.22.t: "[FROM.GetName] Proposes Ceasefire"
+ ethiopia.22.d: "After our forces broke through the enemy lines, we were contacted by [FROM.GetAdj] government, stating that they agree to the Organization of African Unity peace framework. They are proposing an immediate ceasefire"
+ ethiopia.22.a: "Finally! Victory!"
+ ethiopia.22.b: "We won't stop until they kneel before us!"
 
  #Ethiopia News
  ethiopia_news.1.t: "Ethiopia gains Chinese Military Assistance"
@@ -2293,6 +2301,9 @@
  ethiopia_news.6.t: "The Restoration of the PDRE"
  ethiopia_news.6.d: "In a political shock, the Ethiopian government has decided to overturn the 1995 constitution and to cede power to the communist party once more.\n\nMengistu Haile Mariam has today once again taken over leadership of the country - he however rejected to take an oath that would bind his now once more limitless power inside the country to a preset rule of rules. He commented "I know what's best for the people, I don't need an oath", when asked about it by one of the few remaining international journalists.\n\nEthiopia is now widely expected to fall back to its old dark days of the 1980s."
  ethiopia_news.6.a: "The PDRE is back to the world stage."
+ ethiopia_news.7.t: "Ceasefire Between Ethiopia and Eritrea"
+ ethiopia_news.7.d: "The government of Ethiopia and Eritrea have agreed to cease hostilities and declare a ceasefire. Ever since the conflict started in 1998, the Organization of African Unity has been trying to propose a peace plan to solve the border conflict between the two countries. It seems that the countries have finally agreed to try and solve their issues peacefully."
+ ethiopia_news.7.a: "Finally!"
 
  ###European Union Events###
  european_union.1.t: "[From.GetName] wants to join the EU"
