@@ -34,6 +34,9 @@ Politics/Influence
 - Added influence values for Liberian and Sierra Leonean rebels
 - Made Armed Forces Revolutionary council a puppet of Taylor's Liberia to fix some weirdness with the wars
 
+Content
+- Added ceasefire for Ethiopian-Eritrean war to stop them fighting forever
+
 Bugfixes
 - Fixed AI spamming Trade Agreement
 - Localization fixes in One Child Policy
